5.0.3 -> 5.0.4:
    - jbj: tests: add coverage for %pretrans et al scriptlets.
    - jbj: tests: verify upgrades using the edos-test packages.
    - jbj: merge "explicit-source-fetch-cli-option" patch from OpenPKG.
    - jbj: merge "download-source-files-from-original-location" patch from OpenPKG.
    - jbj: merge "support-external-download-command" patch from OpenPKG.
    - jbj: merge "support-srcdefattr" patch from OpenPKG.
    - jbj: permit noarch sub-packages. Pattern match guaranteee next ...
    - jbj: parser: inherit group/summary/description if not specified in subpkg.
    - jbj: parser: permit identically named sub-pkgs with different versions.
    - jbj: parser: trim comments where it makes sense to do so.
    - jbj: tests: add check-install target to attempt --relocate install.
    - jbj: tests: enhance the devtool-sanity package with scripts and a file.
    - jbj: tests: verify -Kv output using popt.
    - jbj: tests: verify setup using --version/--querytags/--showrc.
    - jbj: display noisy getconf()/uname() info with -vv --showrc instead.
    - jbj: shorten debugging messages, --queryformat strings passed to
	headerSprintf are getting huge.
    - jbj: fix: NUL terminate dst on EXPR->ARRAY parser state transition
	(see --yum:primary.yaml spew for reproducer)
    - jbj: restore deploop diagnostic message (Kacper Kornet kornet@camk.edu.pl).
    - jbj: devtool system: enable --with-pcre.
    - jbj: devtool system: backport and enable --with-uuid (w/o lua for now).
    - jbj: add expanded build scripts for --specsrpm --queryformat spewage.
     - jbj: fix: is_selinux_enbled() > 0 is the correct test.
     - rpm.org: Mask signals while moving rebuilt rpmdb into place.
     - rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
     - jbj: debuginfo: refactor 2 existing upgrade policy rules before
	adding a new contextually sensitive rule for -debuginfo packages.